fix bomm#3 add main category AudioVideo

--- a/easyabc.desktop
+++ b/easyabc.desktop
@@ -10,7 +10,7 @@ Exec=/usr/share/easyabc/easy_abc.py %f
 TryExec=/usr/share/easyabc/easy_abc.py
 Icon=/usr/share/easyabc/img/logo256.png
 Terminal=false
-Categories=Music;Education;
+Categories=AudioVideo;Education;Music;
 StartupNotify=true
 StartupWMClass=easy_abc.py
 MimeType=text/vnd.abc;
